Ensure hover state contrast also has no contrast issues

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -121,12 +121,14 @@ a:focus,
 .hover-feature-metadata,
 .pagination > li > a.disabled,
 .pagination .disabled > a,
+.pagination .disabled > a:hover,
 .graph-designer-header,
 .graph-type {
     color: #595959;
 }
 
-.pagination .disabled > a {
+.pagination .disabled > a,
+.pagination .disabled > a:hover {
     opacity: 1;
 }
 
